--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,7 +10,7 @@ http:
     key: ""
 
 app:
-  name: "PTITCS"
+  name: "rolasotelo"
   environment: "local"
   # Change this on any live environments
   encryptionKey: "?E(G+KbPeShVmYq3t6w9z$C&F)J@McQf"
